@@ -5,38 +5,41 @@ import java.io.InputStream;
 import java.time.DayOfWeek;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
-import java.time.LocalTime;
 import java.time.temporal.ChronoUnit;
 import java.util.*;
 import java.util.stream.Collectors;
-
-import br.edu.ufape.hvu.controller.dto.request.ReagendamentoRequest;
 import br.edu.ufape.hvu.controller.dto.auth.TokenResponse;
+import br.edu.ufape.hvu.controller.dto.request.*;
+import br.edu.ufape.hvu.exception.OrigemAnimalInvalidaException;
+import br.edu.ufape.hvu.exception.ResourceNotFoundException;
+import br.edu.ufape.hvu.exception.types.BusinessException;
+import br.edu.ufape.hvu.exception.types.auth.ForbiddenOperationException;
+import br.edu.ufape.hvu.repository.AgendamentoRepository;
+import br.edu.ufape.hvu.model.enums.OrigemAnimal;
+import br.edu.ufape.hvu.repository.AnimalRepository;
+import br.edu.ufape.hvu.repository.OrgaoRepository;
 import lombok.RequiredArgsConstructor;
 import br.edu.ufape.hvu.model.enums.StatusAgendamentoEVaga;
-import org.hibernate.service.spi.ServiceException;
-import org.springframework.beans.factory.annotation.Autowired;
+import org.modelmapper.ModelMapper;
+import org.modelmapper.TypeMap;
 import org.springframework.dao.DataIntegrityViolationException;
-import org.springframework.http.HttpStatus;
 import org.springframework.security.access.AccessDeniedException;
 import org.springframework.stereotype.Service;
+import org.springframework.web.multipart.MultipartFile;
 import org.springframework.web.server.ResponseStatusException;
-
-import br.edu.ufape.hvu.controller.dto.request.AgendamentoEspecialRequest;
-import br.edu.ufape.hvu.controller.dto.request.VagaCreateRequest;
-import br.edu.ufape.hvu.controller.dto.request.VagaTipoRequest;
-import br.edu.ufape.hvu.exception.DuplicateAccountException;
 import br.edu.ufape.hvu.exception.IdNotFoundException;
 import br.edu.ufape.hvu.model.*;
 import br.edu.ufape.hvu.service.*;
 import jakarta.transaction.Transactional;
 
-import javax.xml.crypto.Data;
-
 @Service @RequiredArgsConstructor
 public class Facade {
+    // ModelMapper
+    private final ModelMapper modelMapper;
+
     // Auth--------------------------------------------------------------
     private final KeycloakService keycloakService;
+    private final MedicoServiceInterface medicoServiceInterface;
 
     public TokenResponse login(String username, String password) {
         return keycloakService.login(username, password);
@@ -52,10 +55,13 @@ public class Facade {
 
     private final TutorServiceInterface tutorServiceInterface;
 
-
-
     @Transactional
     public Tutor saveTutor(Tutor newInstance, String password) throws ResponseStatusException {
+        if (newInstance.isAnonimo()) {
+            throw new RuntimeException("Não é permitido salvar um tutor como anônimo por este método.");
+        }
+
+        tutorServiceInterface.verificarDuplicidade(newInstance.getCpf(), newInstance.getEmail());
         String userKcId = null;
         keycloakService.createUser(newInstance.getCpf(), newInstance.getEmail(), password, "tutor");
         try {
@@ -73,61 +79,74 @@ public class Facade {
     }
 
     @Transactional
-    public Tutor updateTutor(Tutor transientObject) {
+    public Tutor updateTutor(Long id, TutorRequest request, String idSession) {
+        Tutor tutor = findTutorById(id, idSession); // já faz a verificação de acesso
+
+        // Mapeamento e atualização
+        Tutor updatedFields = request.convertToEntity();
+
+        modelMapper.typeMap(Tutor.class, Tutor.class)
+                .addMappings(mapper -> mapper.skip(Tutor::setId))
+                .map(updatedFields, tutor);
+
         try {
-            Tutor newTutor =  tutorServiceInterface.updateTutor(transientObject);
+            Tutor newTutor = tutorServiceInterface.updateTutor(tutor);
             keycloakService.updateUser(newTutor.getUserId(), newTutor.getEmail());
             return newTutor;
-        }catch (Exception e){
-            throw new RuntimeException("Error updating user: " + e.getMessage());
+        } catch (Exception e) {
+            throw new RuntimeException("Erro ao atualizar o usuário: " + e.getMessage());
         }
     }
 
     public Tutor findTutorById(long id, String idSession) {
-        Tutor tutor = tutorServiceInterface.findTutorById(id);
+        if (keycloakService.hasRoleSecretario(idSession) || keycloakService.hasRolePatologista(idSession)) {
+            return tutorServiceInterface.findTutorById(id);
+        }
 
-        if(!keycloakService.hasRoleSecretario(idSession) && !keycloakService.hasRoleMedico(idSession) && !tutor.getUserId().equals(idSession)){
-            throw new AccessDeniedException("You do not have permission to get this tutor");
+        Tutor tutor = tutorServiceInterface.findTutorById(id);
+        if (!tutor.getUserId().equals(idSession)) {
+            throw new ForbiddenOperationException("Você não é responsável por este animal");
         }
 
         return tutor;
     }
 
-    public Tutor findTutorByuserId(String userId) {
-        return tutorServiceInterface.findTutorByuserId(userId);
+    public Tutor findTutorByUserId(String userId) {
+        return tutorServiceInterface.findTutorByUserId(userId);
     }
 
     public Tutor findTutorByanimalId(long animalId) {
-        return tutorServiceInterface.findTutorByanimalId(animalId);
+        return tutorServiceInterface.findTutorByAnimalId(animalId);
     }
 
     public List<Tutor> getAllTutor() {
         return tutorServiceInterface.getAllTutor();
     }
 
-    public void deleteTutor(Tutor persistentObject) {
-        tutorServiceInterface.deleteTutor(persistentObject);
-    }
-
     @Transactional
     public void deleteTutor(long id, String idSession) {
+        Tutor oldObject = findTutorById(id, idSession);
+
+        if(!keycloakService.hasRoleSecretario(idSession) && !oldObject.getUserId().equals(idSession)){
+            throw new ForbiddenOperationException("Você não tem permição de acessar esse tutor ou alterar os dados do mesmo.");
+        }
+
         try {
             tutorServiceInterface.deleteTutor(id);
             keycloakService.deleteUser(idSession);
-        }catch (Exception e){
+        } catch (Exception e) {
             throw new RuntimeException("Error deleting user");
         }
     }
 
-
     // Cancelamento--------------------------------------------------------------
-    @Autowired
-    private CancelamentoServiceInterface cancelamentoServiceInterface;
+    private final CancelamentoServiceInterface cancelamentoServiceInterface;
 
-    public Cancelamento cancelarAgendamento(Cancelamento newInstance) {
-        Agendamento agendamento = findAgendamentoById(newInstance.getAgendamento().getId());
+    @Transactional
+    public Cancelamento cancelarAgendamento(Cancelamento newInstance, String idSession) {
+        Agendamento agendamento = findAgendamentoById(newInstance.getAgendamento().getId(), idSession);
         agendamento.setStatus("Cancelado");
-        Vaga vaga = getVagaByAgendamento(agendamento.getId());
+        Vaga vaga = getVagaByAgendamento(agendamento.getId(), idSession);
         vaga.setStatus("Disponivel");
         vaga.setAgendamento(null);
         newInstance.setDataVaga(vaga.getDataHora());
@@ -136,11 +155,12 @@ public class Facade {
         return cancelamentoServiceInterface.saveCancelamento(newInstance);
     }
 
-    public Cancelamento cancelarVaga(Cancelamento newInstance) {
-        Vaga vaga = findVagaById(newInstance.getVaga().getId());
+    @Transactional
+    public Cancelamento cancelarVaga(Cancelamento newInstance, String idSession) {
+        Vaga vaga = findVagaById(newInstance.getVaga().getId(), idSession);
         vaga.setStatus("Cancelado");
         if(vaga.getAgendamento() != null) {
-            Agendamento agendamento = findAgendamentoById(vaga.getAgendamento().getId());
+            Agendamento agendamento = findAgendamentoById(vaga.getAgendamento().getId(), idSession);
             agendamento.setStatus("Cancelado");
         }
         vaga.setAgendamento(null);
@@ -150,8 +170,25 @@ public class Facade {
         return cancelamentoServiceInterface.saveCancelamento(newInstance);
     }
 
-    public Cancelamento updateCancelamento(Cancelamento transientObject) {
-        return cancelamentoServiceInterface.updateCancelamento(transientObject);
+    @Transactional
+    public Cancelamento updateCancelamento(Long id, CancelamentoRequest obj) {
+
+        Cancelamento oldObject = findCancelamentoById(id);
+
+        // Verifica se há uma nova especialidade e busca no banco
+        if (obj.getEspecialidade() != null) {
+            oldObject.setEspecialidade(findEspecialidadeById(obj.getEspecialidade().getId()));
+            obj.setEspecialidade(null); // evita sobrescrita ao mapear
+        }
+
+        // Mapeamento parcial (sem sobrescrever o ID)
+        TypeMap<CancelamentoRequest, Cancelamento> typeMapper = modelMapper
+                .typeMap(CancelamentoRequest.class, Cancelamento.class)
+                .addMappings(mapper -> mapper.skip(Cancelamento::setId));
+
+        typeMapper.map(obj, oldObject);
+
+        return cancelamentoServiceInterface.updateCancelamento(oldObject);
     }
 
     public Cancelamento findCancelamentoById(long id) {
@@ -167,24 +204,35 @@ public class Facade {
         return cancelamentoServiceInterface.getAllCancelamento();
     }
 
-    public void deleteCancelamento(Cancelamento persistentObject) {
-        cancelamentoServiceInterface.deleteCancelamento(persistentObject);
-    }
-
+    @Transactional
     public void deleteCancelamento(long id) {
         cancelamentoServiceInterface.deleteCancelamento(id);
     }
 
     // TipoConsulta--------------------------------------------------------------
-    @Autowired
-    private TipoConsultaServiceInterface tipoConsultaServiceInterface;
+    private final TipoConsultaServiceInterface tipoConsultaServiceInterface;
 
+    @Transactional
     public TipoConsulta saveTipoConsulta(TipoConsulta newInstance) {
         return tipoConsultaServiceInterface.saveTipoConsulta(newInstance);
     }
 
-    public TipoConsulta updateTipoConsulta(TipoConsulta transientObject) {
-        return tipoConsultaServiceInterface.updateTipoConsulta(transientObject);
+    @Transactional
+    public TipoConsulta updateTipoConsulta(Long id, TipoConsultaRequest transientObject) {
+
+
+        //TipoConsulta o = obj.convertToEntity();
+        TipoConsulta oldObject = findTipoConsultaById(id);
+        TipoConsulta obj = transientObject.convertToEntity();
+
+        TypeMap<TipoConsulta, TipoConsulta> typeMapper = modelMapper
+                .typeMap(TipoConsulta.class, TipoConsulta.class)
+                .addMappings(mapper -> mapper.skip(TipoConsulta::setId));
+
+
+        typeMapper.map(obj, oldObject);
+
+        return tipoConsultaServiceInterface.updateTipoConsulta(oldObject);
     }
 
     public TipoConsulta findTipoConsultaById(long id) {
@@ -195,81 +243,132 @@ public class Facade {
         return tipoConsultaServiceInterface.getAllTipoConsulta();
     }
 
-    public void deleteTipoConsulta(TipoConsulta persistentObject) {
-        tipoConsultaServiceInterface.deleteTipoConsulta(persistentObject);
-    }
-
+    @Transactional
     public void deleteTipoConsulta(long id) {
         tipoConsultaServiceInterface.deleteTipoConsulta(id);
     }
 
     // Usuario--------------------------------------------------------------
-    @Autowired
-    private UsuarioServiceInterface usuarioServiceInterface;
+    private final UsuarioServiceInterface usuarioServiceInterface;
 
+    @Transactional
     public Usuario saveUsuario(Usuario newInstance) {
+        if(newInstance == null) {
+            throw new IllegalArgumentException("Usuario não pode ser nulo");
+        }
+
         return usuarioServiceInterface.saveUsuario(newInstance);
     }
 
-    public Usuario updateUsuario(Usuario transientObject, String idSession) {
-        return usuarioServiceInterface.updateUsuario(transientObject, idSession);
+    @Transactional
+    public Usuario updateUsuario(long id, UsuarioRequest request, String idSession) {
+        if (request == null || idSession == null || idSession.isBlank()) {
+            throw new IllegalArgumentException("Usuário ou ID da sessão inválidos.");
+        }
+
+        // Valida autorização
+        Usuario usuarioExistente = findUsuarioById(id, idSession);
+
+        Usuario usuarioAtualizado = request.convertToEntity();
+        modelMapper.typeMap(Usuario.class, Usuario.class)
+                .addMappings(mapper -> mapper.skip(Usuario::setId))
+                .map(usuarioAtualizado, usuarioExistente);
+
+        Usuario newUsuario = usuarioServiceInterface.updateUsuario(usuarioExistente, idSession);
+        keycloakService.updateUser(newUsuario.getUserId(), newUsuario.getEmail());
+
+        return newUsuario;
     }
 
     public Usuario findUsuarioById(long id, String idSession) {
-        return usuarioServiceInterface.findUsuarioById(id, idSession);
-    }
-
-    public Usuario findUsuarioByuserId(String userId) throws IdNotFoundException {
-        return usuarioServiceInterface.findUsuarioByuserId(userId);
-    }
-
-    public void findDuplicateAccountByuserId(String userId) throws DuplicateAccountException {
-        try {
-            Usuario usuario = findUsuarioByuserId(userId);
-            if (usuario instanceof Tutor) {
-                throw new DuplicateAccountException("tutor");
-            }
-
-            if (usuario instanceof Medico) {
-                throw new DuplicateAccountException("medico");
-            }
-
-        } catch (IdNotFoundException ex) {
-
+        if (id <= 0) {
+            throw new IllegalArgumentException("ID do usuário inválido.");
         }
 
+        Usuario usuario = usuarioServiceInterface.findUsuarioById(id);
+        if (usuario.getUserId().equals(idSession)) {
+            return usuario;
+        }
+
+        if (keycloakService.hasRoleSecretario(idSession)) {
+            if (usuario instanceof Medico || usuario instanceof Tutor) {
+                return usuario;
+            }
+        } else if (keycloakService.hasRoleAdminLapa(idSession) && usuario instanceof Patologista) {
+            return usuario;
+        }
+
+        throw new ForbiddenOperationException("Você não tem acesso para visualizar este usuário.");
     }
 
-    public List<Usuario> getAllUsuario() {
-        return usuarioServiceInterface.getAllUsuario();
+    public Usuario findUsuarioByUserId(String userId) throws IdNotFoundException {
+        if (userId == null || userId.isBlank()) {
+            throw new IllegalArgumentException("userId não pode ser vazio.");
+        }
+        return usuarioServiceInterface.findUsuarioByUserId(userId);
     }
 
-    public void deleteUsuario(Usuario persistentObject) {
-        usuarioServiceInterface.deleteUsuario(persistentObject);
-    }
+    @Transactional
+    public void deleteUsuario(long id, String idSession) {
+        if (id <= 0) {
+            throw new IllegalArgumentException("ID inválido para exclusão.");
+        }
 
-    public void deleteUsuario(long id) {
+        Usuario usuario = usuarioServiceInterface.findUsuarioById(id);
+        boolean podeExcluir = false;
+
+        if (keycloakService.hasRoleSecretario(idSession)) {
+            if (usuario.getUserId().equals(idSession) || usuario instanceof Medico || usuario instanceof Tutor) {
+                podeExcluir = true;
+            }
+        }
+        else if (keycloakService.hasRoleAdminLapa(idSession) && (usuario.getUserId().equals(idSession) || usuario instanceof Patologista)) {
+            podeExcluir = true;
+        }
+
+        if (!podeExcluir) {
+            throw new ForbiddenOperationException("Você não tem permissão para excluir este usuário.");
+        }
         usuarioServiceInterface.deleteUsuario(id);
     }
 
     // Cronograma--------------------------------------------------------------
-    @Autowired
-    private CronogramaServiceInterface cronogramaServiceInterface;
+    private final CronogramaServiceInterface cronogramaServiceInterface;
 
+    @Transactional
     public Cronograma saveCronograma(Cronograma newInstance) {
         return cronogramaServiceInterface.saveCronograma(newInstance);
     }
 
-    public Cronograma updateCronograma(Cronograma transientObject) {
-        return cronogramaServiceInterface.updateCronograma(transientObject);
+    @Transactional
+    public Cronograma updateCronograma(CronogramaRequest obj, Long id, String idSession) {
+        Cronograma oldObject = findCronogramaById(id);
+
+        // medico
+        if(obj.getMedico() != null){
+            oldObject.setMedico(findMedicoById(obj.getMedico().getId(), idSession));
+            obj.setMedico(null);
+        }
+
+        if (obj.getEspecialidade() != null) {
+            oldObject.setEspecialidade(findEspecialidadeById(obj.getEspecialidade().getId()));
+            obj.setEspecialidade(null);
+        }
+
+        TypeMap<CronogramaRequest, Cronograma> typeMapper = modelMapper
+                .typeMap(CronogramaRequest.class, Cronograma.class)
+                .addMappings(mapper -> mapper.skip(Cronograma::setId));
+
+        typeMapper.map(obj, oldObject);
+        return cronogramaServiceInterface.updateCronograma(oldObject);
     }
 
     public Cronograma findCronogramaById(long id) {
         return cronogramaServiceInterface.findCronogramaById(id);
     }
 
-    public List<Cronograma> findCronogramaByMedicoId(long id){
-        Medico medico = findMedicoById(id);
+    public List<Cronograma> findCronogramaByMedicoId(long id, String idSession){
+        Medico medico = findMedicoById(id, idSession);
         return cronogramaServiceInterface.findCronogramaByMedico(medico);
     }
 
@@ -282,54 +381,7 @@ public class Facade {
         return cronogramaServiceInterface.getAllCronograma();
     }
 
-
-
-    public Map<LocalDateTime, List<Cronograma>> scheduleAvailable (LocalDate data, String turno, Especialidade especialidade) {
-        LocalTime shiftBegin = turno.equals("Manhã") ? LocalTime.of(6, 0) : LocalTime.of(12, 0);
-        LocalTime shiftEnd = turno.equals("Manhã") ? LocalTime.of(12, 0) : LocalTime.of(20, 0);
-
-        Map<LocalDateTime, List<Cronograma>> horariosCronogramas = new TreeMap<>();
-
-        List<Cronograma> cronogramas = findByEspecialidadeAndDiaAndTurno(especialidade, data.getDayOfWeek(), turno);
-        for (Cronograma cronograma : cronogramas) {
-
-            List<LocalDateTime> scheduleFilled = findVagaByDataAndEspecialidadeAndMedico(data, especialidade, cronograma.getMedico())
-                    .stream()
-                    .map(Vaga::getDataHora)
-                    .collect(Collectors.toList());
-
-            LocalTime currentTime = cronograma.getHorarios().get(data.getDayOfWeek()).getInicio();
-            if (currentTime.isBefore(shiftBegin)){
-                currentTime = shiftBegin;
-            }
-            LocalTime shiftEndCronograma = cronograma.getHorarios().get(data.getDayOfWeek()).getFim();
-
-            while (currentTime.plusMinutes(Math.round(cronograma.getTempoAtendimento() - 1)).isBefore(shiftEnd) &&
-                    currentTime.plusMinutes(Math.round(cronograma.getTempoAtendimento() - 1)).isBefore(shiftEndCronograma) ||
-                    currentTime.plusMinutes(Math.round(cronograma.getTempoAtendimento() - 1)).equals(shiftEnd) &&
-                            currentTime.plusMinutes(Math.round(cronograma.getTempoAtendimento() - 1)).equals(shiftEndCronograma)){
-                LocalDateTime scheduleFull = LocalDateTime.of(data, currentTime);
-
-                if (!scheduleFilled.contains(scheduleFull)) {
-                    horariosCronogramas.computeIfAbsent(scheduleFull, k -> new ArrayList<>()).add(cronograma);
-                    scheduleFilled.add(scheduleFull);
-                }
-
-                currentTime = currentTime.plusMinutes(Math.round(cronograma.getTempoAtendimento()));
-            }
-        }
-
-        return horariosCronogramas;
-    }
-
-    public List<Cronograma> findByEspecialidadeAndDiaAndTurno(Especialidade especialidade, DayOfWeek dia, String turno){
-        return cronogramaServiceInterface.findByEspecialidadeAndDiaAndTurno(especialidade, dia, turno);
-    }
-
-    public void deleteCronograma(Cronograma persistentObject) {
-        cronogramaServiceInterface.deleteCronograma(persistentObject);
-    }
-
+    @Transactional
     public void deleteCronograma(long cronogramaId) {
         Cronograma cronograma = findCronogramaById(cronogramaId);
         cronogramaServiceInterface.deleteCronograma(cronograma.getId());
@@ -339,13 +391,14 @@ public class Facade {
     private final MedicoServiceInterface medicoService;
 
     @Transactional
-    public Medico saveMedico(Medico newInstance, String password) {
+    public Medico saveMedico(MedicoRequest request, String password) {
+        Medico medico = request.convertToEntity();
         String userKcId = null;
-        keycloakService.createUser(newInstance.getCpf(), newInstance.getEmail(), password, "medico");
+        keycloakService.createUser(medico.getCpf(), medico.getEmail(), password, "medico");
         try {
-            userKcId = keycloakService.getUserId(newInstance.getEmail());
-            newInstance.setUserId(userKcId);
-            return medicoService.saveMedico(newInstance);
+            userKcId = keycloakService.getUserId(medico.getEmail());
+            medico.setUserId(userKcId);
+            return medicoService.saveMedico(medico);
         }catch (DataIntegrityViolationException e){
             keycloakService.deleteUser(userKcId);
             throw e;
@@ -356,39 +409,46 @@ public class Facade {
     }
 
     @Transactional
-    public Medico updateMedico(Medico transientObject) {
-        try {
-            Medico newMedico =  medicoService.updateMedico(transientObject);
-            keycloakService.updateUser(newMedico.getUserId(), newMedico.getEmail());
-            return newMedico;
-        }catch (Exception e){
-            throw new RuntimeException("Error updating user: " + e.getMessage());
+    public Medico updateMedico(Long id, MedicoRequest request, String idSession) {
+        if (request == null) {
+            throw new IllegalArgumentException("Dados inválidos para atualização.");
         }
+
+        Medico oldMedico = medicoService.findMedicoById(id); // lança EntityNotFoundException se não existir
+
+        if(!keycloakService.hasRoleSecretario(idSession) && !oldMedico.getUserId().equals(idSession)){
+            throw new ForbiddenOperationException("Você não tem acesso para buscar esse medico ou alterar os dados do mesmo.");
+        }
+
+        Medico medicoAtualizado = request.convertToEntity();
+
+        // Atualiza instituição, se necessário
+        if (request.getInstituicao() != null) {
+            oldMedico.setInstituicao(findInstituicaoById(request.getInstituicao().getId()));
+        }
+
+        modelMapper.typeMap(Medico.class, Medico.class)
+                .addMappings(mapper -> mapper.skip(Medico::setId))
+                .map(medicoAtualizado, oldMedico);
+
+        Medico newMedico = medicoService.updateMedico(oldMedico);
+        keycloakService.updateUser(newMedico.getUserId(), newMedico.getEmail());
+        return newMedico;
     }
 
-    public Medico findMedicoById(long id) {
+    public Medico findMedicoById(long id, String idSession) {
+        Medico medico = medicoService.findMedicoById(id);
+        if(!keycloakService.hasRoleSecretario(idSession) && !medico.getUserId().equals(idSession) && !keycloakService.hasRolePatologista(idSession)){
+            throw new ForbiddenOperationException("Você não tem acesso para buscar esse medico ou alterar os dados do mesmo.");
+        }
         return medicoService.findMedicoById(id);
     }
 
-    public Medico findMedicoByuserId(String userId) throws IdNotFoundException {
-        return medicoService.findMedicoByuserId(userId);
+    public List<Medico> findAllMedico() {
+        return medicoService.findAllMedico();
     }
 
-
-    public List<Medico> getAllMedico() {
-        return medicoService.getAllMedico();
-    }
-
-
-    public void deleteMedico(Medico persistentObject) {
-        try {
-            medicoService.deleteMedico(persistentObject);
-            keycloakService.deleteUser(persistentObject.getUserId());
-        }catch (Exception e){
-            throw new RuntimeException("Error deleting user");
-        }
-    }
-
+    @Transactional
     public void deleteMedico(long id) {
         medicoService.deleteMedico(id);
     }
@@ -403,16 +463,109 @@ public class Facade {
         return medicoService.findByEspecialidade(especialidade);
     }
 
-    // Raca--------------------------------------------------------------
-    @Autowired
-    private RacaServiceInterface racaServiceInterface;
+    private Medico findMedicoByUserId(String idSession) {
+        return medicoServiceInterface.findByUserId(idSession);
+    }
 
+    // Patologista--------------------------------------------------------------
+    private final PatologistaServiceInterface patologistaService;
+
+    @Transactional
+    public Patologista savePatologista(PatologistaRequest request, String password) {
+        Patologista patologista = request.convertToEntity();
+        String userKcId = null;
+        keycloakService.createUser(patologista.getCpf(), patologista.getEmail(), password, "patologista");
+        try {
+            userKcId = keycloakService.getUserId(patologista.getEmail());
+            patologista.setUserId(userKcId);
+            return patologistaService.savePatologista(patologista);
+        }catch (DataIntegrityViolationException e){
+            keycloakService.deleteUser(userKcId);
+            throw e;
+        }catch (Exception e){
+            keycloakService.deleteUser(userKcId);
+            throw new RuntimeException("Ocorreu um erro inesperado ao salvar o usuário: "+ e.getMessage(), e);
+        }
+    }
+
+    @Transactional
+    public Patologista updatePatologista(Long id, PatologistaRequest request, String idSession) {
+        if (request == null) {
+            throw new IllegalArgumentException("Dados inválidos para atualização.");
+        }
+
+        Patologista oldPatologista = patologistaService.findPatologistaById(id); // lança EntityNotFoundException se não existir
+
+        if(!keycloakService.hasRoleAdminLapa(idSession) && !oldPatologista.getUserId().equals(idSession)){
+            throw new ForbiddenOperationException("Você não tem acesso para buscar esse patologista ou alterar os dados do mesmo.");
+        }
+
+        Patologista patologistaAtualizado = request.convertToEntity();
+
+        modelMapper.typeMap(Patologista.class, Patologista.class)
+                .addMappings(mapper -> mapper.skip(Patologista::setId))
+                .map(patologistaAtualizado, oldPatologista);
+
+        Patologista newPatologista = patologistaService.updatePatologista(oldPatologista);
+        keycloakService.updateUser(newPatologista.getUserId(), newPatologista.getEmail());
+        return newPatologista;
+    }
+
+    public Patologista findPatologistaById(long id, String idSession) {
+        Patologista patologista = patologistaService.findPatologistaById(id);
+
+        if (!keycloakService.hasRoleAdminLapa(idSession) && !keycloakService.hasRolePatologista(idSession)) {
+            throw new ForbiddenOperationException("Você não tem acesso para buscar esse patologista ou alterar os dados do mesmo.");
+        }
+
+        return patologista;
+    }
+
+    public List<Patologista> getAllPatologista() {
+        return patologistaService.getAllPatologista();
+    }
+
+    @Transactional
+    public void deletePatologista(long id) {
+        patologistaService.deletePatologista(id);
+    }
+
+
+
+    // Raca--------------------------------------------------------------
+    private final RacaServiceInterface racaServiceInterface;
+
+    @Transactional
     public Raca saveRaca(Raca newInstance) {
+        Long especieId = newInstance.getEspecie().getId();
+
+        if (especieId == null) {
+            throw new RuntimeException("Espécie não informada");
+        }
+
+        Especie especie = especieServiceInterface.findEspecieById(especieId);
+        newInstance.setEspecie(especie);
+
         return racaServiceInterface.saveRaca(newInstance);
     }
 
-    public Raca updateRaca(Raca transientObject) {
-        return racaServiceInterface.updateRaca(transientObject);
+    @Transactional
+    public Raca updateRaca(RacaRequest obj, Long id) {
+        //Raca o = obj.convertToEntity();
+        Raca oldObject = findRacaById(id);
+
+        if (obj.getEspecie() != null) {
+            oldObject.setEspecie(findEspecieById(obj.getEspecie().getId()));
+            obj.setEspecie(null);
+        }
+
+        TypeMap<RacaRequest, Raca> typeMapper = modelMapper
+                .typeMap(RacaRequest.class, Raca.class)
+                .addMappings(mapper -> mapper.skip(Raca::setId));
+
+
+        typeMapper.map(obj, oldObject);
+        return racaServiceInterface.updateRaca(oldObject);
     }
 
     public Raca findRacaById(long id) {
@@ -428,24 +581,32 @@ public class Facade {
         return racaServiceInterface.findByEspecie(especie);
     }
 
-    public void deleteRaca(Raca persistentObject) {
-        racaServiceInterface.deleteRaca(persistentObject);
-    }
-
+    @Transactional
     public void deleteRaca(long id) {
         racaServiceInterface.deleteRaca(id);
     }
 
     // Aviso--------------------------------------------------------------
-    @Autowired
-    private AvisoServiceInterface avisoServiceInterface;
+    private final AvisoServiceInterface avisoServiceInterface;
 
+    @Transactional
     public Aviso saveAviso(Aviso newInstance) {
         return avisoServiceInterface.saveAviso(newInstance);
     }
 
-    public Aviso updateAviso(Aviso transientObject) {
-        return avisoServiceInterface.updateAviso(transientObject);
+    @Transactional
+    public Aviso updateAviso(AvisoRequest transientObject, Long id) {
+        //Aviso o = obj.convertToEntity();
+        Aviso oldObject = avisoServiceInterface.findAvisoById(id);
+
+        TypeMap<AvisoRequest, Aviso> typeMapper = modelMapper
+                .typeMap(AvisoRequest.class, Aviso.class)
+                .addMappings(mapper -> mapper.skip(Aviso::setId));
+
+        typeMapper.map(transientObject, oldObject);
+
+
+        return avisoServiceInterface.updateAviso(oldObject);
     }
 
     public Aviso findAvisoById(long id) {
@@ -456,55 +617,152 @@ public class Facade {
         return avisoServiceInterface.getAllAviso();
     }
 
-    public void deleteAviso(Aviso persistentObject) {
-        avisoServiceInterface.deleteAviso(persistentObject);
+    public List<Aviso> findAvisosHabilitados() {
+        return avisoServiceInterface.findAvisosHabilitados();
     }
 
+    @Transactional
     public void deleteAviso(long id) {
         avisoServiceInterface.deleteAviso(id);
     }
 
     // Vaga--------------------------------------------------------------
-    @Autowired
-    private VagaServiceInterface vagaServiceInterface;
 
+    private final VagaServiceInterface vagaServiceInterface;
+
+    public List<Vaga> findAllVaga(String idSession) {
+        if (keycloakService.hasRoleSecretario(idSession)) {
+            return vagaServiceInterface.findAllVaga();
+        }
+
+        if (keycloakService.hasRoleMedico(idSession)) {
+            Medico medico = medicoServiceInterface.findByUserId(idSession);
+            return vagaServiceInterface.findVagasByMedicoId(medico.getId());
+        }
+
+        return findVagasForTutor(idSession);
+    }
+
+    private List<Vaga> findVagasForTutor(String idSession) {
+        Tutor tutor = tutorServiceInterface.findTutorByUserId(idSession);
+
+        List<Long> animalIds = tutor.getAnimais().stream()
+                .map(Animal::getId)
+                .toList();
+
+        return vagaServiceInterface.findVagasForTutor(animalIds);
+    }
+
+    @Transactional
     public Vaga saveVaga(Vaga newInstance) {
         newInstance.setStatus(String.valueOf(StatusAgendamentoEVaga.Disponivel));
         return vagaServiceInterface.saveVaga(newInstance);
     }
 
-    public Vaga updateVaga(Vaga transientObject) {
+    @Transactional
+    private Vaga updateVaga(Vaga transientObject) {
         return vagaServiceInterface.updateVaga(transientObject);
     }
 
-    public Vaga findVagaById(long id) {
-        return vagaServiceInterface.findVagaById(id);
+    @Transactional
+    public Vaga processUpdateVaga(VagaRequest obj, Long id){
+        //Vaga o = obj.convertToEntity();
+        Vaga oldObject = vagaServiceInterface.findVagaById(id);
+
+        if (obj.getTipoConsulta() != null) {
+            oldObject.setTipoConsulta(tipoConsultaServiceInterface.findTipoConsultaById(obj.getTipoConsulta().getId()));
+            obj.setTipoConsulta(null);
+        }
+
+        if (obj.getEspecialidade() != null) {
+            oldObject.setEspecialidade(especialidadeServiceInterface.findEspecialidadeById(obj.getEspecialidade().getId()));
+            obj.setEspecialidade(null);
+        }
+
+        if(obj.getMedico() != null){
+            oldObject.setMedico(medicoServiceInterface.findMedicoById(obj.getMedico().getId()));
+            obj.setMedico(null);
+        }
+
+        TypeMap<VagaRequest, Vaga> typeMapper = modelMapper
+                .typeMap(VagaRequest.class, Vaga.class)
+                .addMappings(mapper -> mapper.skip(Vaga::setId));
+
+        typeMapper.map(obj, oldObject);
+        return updateVaga(oldObject);
     }
 
-    public List<Vaga> getAllVaga() {
-        return vagaServiceInterface.getAllVaga();
+    public Vaga findVagaById(long id, String idSession) {
+        Vaga vaga = vagaServiceInterface.findVagaById(id);
+
+        if (keycloakService.hasRoleSecretario(idSession)) {
+            return vaga;
+        }
+
+        if (keycloakService.hasRoleMedico(idSession)) {
+            Medico medico = medicoServiceInterface.findByUserId(idSession);
+            if (vaga.getMedico().equals(medico)) {
+                return vaga;
+            }
+            throw new ForbiddenOperationException("Você não tem acesso a esta vaga.");
+        }
+
+        Tutor tutor = tutorServiceInterface.findTutorByUserId(idSession);
+        if (vaga.getAgendamento() == null || tutor.getAnimais().contains(vaga.getAgendamento().getAnimal())) {
+            return vaga;
+        }
+
+        throw new ForbiddenOperationException("Você não tem acesso a esta vaga.");
     }
 
-    public List<Vaga> findVagaByData(LocalDate data){
-        return vagaServiceInterface.findVagasByData(data);
+    public List<Vaga> findVagasByData(LocalDate data, String idSession) {
+        List<Vaga> vagas = vagaServiceInterface.findVagasByData(data);
+
+        if (keycloakService.hasRoleSecretario(idSession)) {
+            return vagas;
+        }
+
+        if (keycloakService.hasRoleMedico(idSession)) {
+            Medico medico = medicoServiceInterface.findByUserId(idSession);
+            return vagas.stream()
+                    .filter(v -> v.getMedico().equals(medico))
+                    .toList();
+        }
+
+        Tutor tutor = tutorServiceInterface.findTutorByUserId(idSession);
+        return vagas.stream()
+                .filter(v -> v.getAgendamento() == null ||
+                        tutor.getAnimais().contains(v.getAgendamento().getAnimal()))
+                .toList();
     }
 
-    public List<Vaga> findVagaBetweenInicialAndFinalDate(LocalDate dataInicial, LocalDate dataFinal){
-        return vagaServiceInterface.findVagaBetweenInicialAndFinalDate(dataInicial,dataFinal);
+    public List<Vaga> findVagaBetweenInicialAndFinalDate(LocalDate dataInicial, LocalDate dataFinal, String idSession) {
+        List<Vaga> vagas = vagaServiceInterface.findVagaBetweenInicialAndFinalDate(dataInicial, dataFinal);
+
+        if (keycloakService.hasRoleSecretario(idSession)) {
+            return vagas;
+        }
+
+        if (keycloakService.hasRoleMedico(idSession)) {
+            Medico medico = medicoServiceInterface.findByUserId(idSession);
+            return vagas.stream()
+                    .filter(v -> v.getMedico().equals(medico))
+                    .toList();
+        }
+
+        Tutor tutor = tutorServiceInterface.findTutorByUserId(idSession);
+        return vagas.stream()
+                .filter(v -> v.getAgendamento() == null || tutor.getAnimais().contains(v.getAgendamento().getAnimal()))
+                .toList();
     }
 
-
-    public List<Vaga> findVagasAndAgendamentoByMedico (LocalDate data, Long IdMedico){
-        Medico medico = findMedicoById(IdMedico);
+    public List<Vaga> findVagasAndAgendamentoByMedico (LocalDate data, Long IdMedico, String idSession) {
+        Medico medico = findMedicoById(IdMedico, idSession);
 
         return vagaServiceInterface.findVagasAndAgendamentoByMedico(data, medico);
     }
 
-    public List<Vaga> findVagaByDataAndEspecialidade(LocalDate data, Especialidade especialidade){
-        return vagaServiceInterface.findVagasByDataAndEspecialidade(data, especialidade);
-    }
-
-    public List<Animal> findAnimaisWithReturn(){
+    public List<Animal> findAnimaisWithReturn() {
         List<Vaga> vagas = vagaServiceInterface.findLatestVagaForEachAnimal();
 
         return vagas.stream()
@@ -515,17 +773,17 @@ public class Facade {
     public List<Animal> findAnimaisWithoutReturn(){
         List<Vaga> vagas = vagaServiceInterface.findLatestVagaForEachAnimalNotReturn();
 
-        List<Animal> allAnimais = getAllAnimal();
+        List<Animal> allAnimais = animalServiceInterface.findAnimalsByOrigemAnimal(OrigemAnimal.HVU);
         List<Agendamento> allAgendamento = getAllAgendamento();
         List<Animal> animalNoReturn = allAnimais.stream()
-                .filter(animal->allAgendamento.stream()
+                .filter(animal -> allAgendamento.stream()
                         .noneMatch(agendamento -> agendamento.getAnimal().equals(animal)))
                 .collect(Collectors.toList());
 
         animalNoReturn
                 .addAll(vagas.stream()
                         .map(vaga -> vaga.getAgendamento().getAnimal())
-                        .collect(Collectors.toList()));
+                        .toList());
         return animalNoReturn;
     }
 
@@ -549,21 +807,26 @@ public class Facade {
         return diasDesdeUltimaConsulta > 30; // Retorna verdadeiro se expirou
     }
 
-    public String verificaSeAnimalPodeMarcarPrimeiraConsultaRetornoOuConsulta(Long id){
-        // verifica se animal já tem uma consulta em aberto -> "Bloqueado"
-        List<Agendamento> allAgendamentos = getAllAgendamento();
+    public String verificaSeAnimalPodeMarcarPrimeiraConsultaRetornoOuConsulta(Long id, String idSession) {
         Animal animal = animalServiceInterface.findAnimalById(id);
 
+        Tutor tutor = tutorServiceInterface.findTutorByAnimalId(animal.getId());
+        if (!tutor.getUserId().equals(idSession) && !keycloakService.hasRoleSecretario(idSession)) {
+            throw new ForbiddenOperationException("Este não é o seu animal");
+        }
+
+        // verifica se animal já tem uma consulta em aberto
+        List<Agendamento> allAgendamentos = getAllAgendamento();
         boolean consultaEmAberto = allAgendamentos.stream()
                 .anyMatch(agendamento -> agendamento.getAnimal() != null &&
-                        agendamento.getAnimal().getId() == id &&
+                        agendamento.getAnimal().getId() == animal.getId() &&
                         !agendamento.getStatus().equals("Finalizado") && !agendamento.getStatus().equals("Cancelado"));
 
-        if(consultaEmAberto){
+        if (consultaEmAberto) {
             return "Bloqueado";
-        }else if(isAnimalWithRetorno(id) || !isRetornoExpirado(id)){
+        } else if (isAnimalWithRetorno(animal.getId()) || !isRetornoExpirado(animal.getId())) {
             return "Retorno";
-        }else{
+        } else {
             return "Primeira Consulta";
         }
     }
@@ -573,18 +836,11 @@ public class Facade {
         return findAnimaisWithReturn().contains(animal);
     }
 
-    public List<Vaga> findVagaByDataAndEspecialidadeAndMedico(LocalDate data, Especialidade especialidade, Medico medico){
-        return vagaServiceInterface.findVagasByDataAndEspecialidadeAndMedico(data, especialidade, medico);
-    }
-
-    public List<Vaga> findVagaByDataAndTurno(LocalDate data, String turno){
+    public List<Vaga> findVagaByDataAndTurno(LocalDate data, String turno) {
         return vagaServiceInterface.findVagasByDataAndTurno(data, turno);
     }
 
-    public void deleteVaga(Vaga persistentObject) {
-        vagaServiceInterface.deleteVaga(persistentObject);
-    }
-
+    @Transactional
     public void deleteVaga(long id) {
         vagaServiceInterface.deleteVaga(id);
     }
@@ -594,13 +850,13 @@ public class Facade {
         return vagaServiceInterface.findVagaByEspecialidade(especialidade);
     }
 
-    public Vaga getVagaByAgendamento(long idAgendamento) {
-        Agendamento agendamento = findAgendamentoById(idAgendamento);
+    public Vaga getVagaByAgendamento(long idAgendamento, String idSession) {
+        Agendamento agendamento = findAgendamentoById(idAgendamento, idSession);
         return vagaServiceInterface.findVagaByAgendamento(agendamento);
     }
 
     @Transactional
-    public String createVagasByTurno(VagaCreateRequest vagaRequestDTO) {
+    public String createVagasByTurno(VagaCreateRequest vagaRequestDTO, String idSessio) {
         List<Vaga> vagas = new ArrayList<>();
         LocalDate startDate = vagaRequestDTO.getData();
         LocalDate endDate = vagaRequestDTO.getDataFinal();
@@ -608,16 +864,16 @@ public class Facade {
         StringBuilder detalheBuilder = new StringBuilder();
 
         if (endDate == null) {
-            if (!isWeekend(startDate)) {
-                detalheBuilder.append(createVagas(startDate, vagaRequestDTO.getTurnoManha(), "Manhã", vagas, countCriacao));
-                detalheBuilder.append(" ").append(createVagas(startDate, vagaRequestDTO.getTurnoTarde(), "Tarde", vagas, countCriacao));
+            if (isWeekend(startDate)) {
+                detalheBuilder.append(createVagas(startDate, vagaRequestDTO.getTurnoManha(), "Manhã", vagas, countCriacao, idSessio));
+                detalheBuilder.append(" ").append(createVagas(startDate, vagaRequestDTO.getTurnoTarde(), "Tarde", vagas, countCriacao, idSessio));
             }
         } else {
             LocalDate currentDate = startDate;
             while (!currentDate.isAfter(endDate)) {
-                if (!isWeekend(currentDate)) {
-                    detalheBuilder.append(createVagas(currentDate, vagaRequestDTO.getTurnoManha(), "Manhã", vagas, countCriacao));
-                    detalheBuilder.append(" ").append(createVagas(currentDate, vagaRequestDTO.getTurnoTarde(), "Tarde", vagas, countCriacao));
+                if (isWeekend(currentDate)) {
+                    detalheBuilder.append(createVagas(currentDate, vagaRequestDTO.getTurnoManha(), "Manhã", vagas, countCriacao, idSessio));
+                    detalheBuilder.append(" ").append(createVagas(currentDate, vagaRequestDTO.getTurnoTarde(), "Tarde", vagas, countCriacao, idSessio));
                 }
                 currentDate = currentDate.plusDays(1);
             }
@@ -627,11 +883,12 @@ public class Facade {
     }
 
     private boolean isWeekend(LocalDate date) {
-        return date.getDayOfWeek() == DayOfWeek.SATURDAY || date.getDayOfWeek() == DayOfWeek.SUNDAY;
+        return date.getDayOfWeek() != DayOfWeek.SATURDAY && date.getDayOfWeek() != DayOfWeek.SUNDAY;
     }
 
-    private String createVagas(LocalDate data, List<VagaTipoRequest> vagaTipo, String turno, List<Vaga> vagas, long[] countCriacao) {
-        List<Vaga> vagasByData = findVagaByData(data);
+    @Transactional
+    private String createVagas(LocalDate data, List<VagaTipoRequest> vagaTipo, String turno, List<Vaga> vagas, long[] countCriacao, String idSession) {
+        List<Vaga> vagasByData = findVagasByData(data, idSession);
         List<Vaga> vagasByDataAndTurno = findVagaByDataAndTurno(data, turno);
         vagasByData.removeIf(vaga -> Objects.equals(vaga.getStatus(), "Cancelado"));
         vagasByDataAndTurno.removeIf(vaga -> Objects.equals(vaga.getStatus(), "Cancelado"));
@@ -649,7 +906,7 @@ public class Facade {
             try {
                 Especialidade especialidade = findEspecialidadeById(especialidadeTipo.getEspecialidade().getId());
                 TipoConsulta tipoConsulta = findTipoConsultaById(especialidadeTipo.getTipoConsulta().getId());
-                Medico medico = findMedicoById(especialidadeTipo.getMedico().getId());
+                Medico medico = findMedicoById(especialidadeTipo.getMedico().getId(), idSession);
 
                 if (count[0] < 16 && count[1] < 8) {
                     Vaga newVaga = new Vaga();
@@ -674,29 +931,63 @@ public class Facade {
         return detalheBuilder.toString().trim();
     }
 
+    private boolean existsVagaByMedicoIdAndAnimalId(Long medicoId, Long animalId) {
+        Medico medico = medicoServiceInterface.findMedicoById(medicoId);
+
+        return vagaServiceInterface.findVagasByMedicoId(medicoId).stream()
+                .filter(vaga -> vaga.getAgendamento() != null)
+                .filter(vaga -> vaga.getAgendamento().getAnimal() != null)
+                .anyMatch(vaga -> vaga.getMedico().equals(medico) &&
+                        vaga.getAgendamento().getAnimal().getId() == animalId);
+    }
 
     // Consulta--------------------------------------------------------------
-    @Autowired
-    private ConsultaServiceInterface consultaServiceInterface;
 
+    private final ConsultaServiceInterface consultaServiceInterface;
+
+    @Transactional
     public Consulta saveConsulta(Long id, Consulta newInstance) {
         Vaga vagaDaConsulta = vagaServiceInterface.findVagaById(id);
         Agendamento agendamentoVaga = agendamentoServiceInterface.findAgendamentoById(vagaDaConsulta.getAgendamento().getId());
 
         Consulta consulta = consultaServiceInterface.saveConsulta(newInstance);
+
         vagaDaConsulta.setStatus("Finalizado");
         agendamentoVaga.setStatus("Finalizado");
 
         vagaDaConsulta.setAgendamento(agendamentoVaga);
         vagaDaConsulta.setConsulta(consulta);
+
         updateVaga(vagaDaConsulta);
         updateAgendamento(agendamentoVaga);
 
         return consulta;
     }
 
-    public Consulta updateConsulta(Consulta transientObject) {
-        return consultaServiceInterface.updateConsulta(transientObject);
+    @Transactional
+    public Consulta updateConsulta(ConsultaRequest obj, Long id, String idSession) {
+        //Consulta o = obj.convertToEntity();
+        Consulta oldObject = findConsultaById(id);
+
+        // medico
+        if(obj.getMedico() != null){
+            oldObject.setMedico(findMedicoById(obj.getMedico().getId(), idSession));
+            obj.setMedico(null);
+        }
+
+        // animal
+        if (obj.getAnimal() != null) {
+            oldObject.setAnimal(findAnimalById(obj.getAnimal().getId(), idSession));
+            obj.setAnimal(null);
+        }
+
+        TypeMap<ConsultaRequest, Consulta> typeMapper = modelMapper
+                .typeMap(ConsultaRequest.class, Consulta.class)
+                .addMappings(mapper -> mapper.skip(Consulta::setId));
+
+
+        typeMapper.map(obj, oldObject);
+        return consultaServiceInterface.updateConsulta(oldObject);
     }
 
     public Consulta findConsultaById(long id) {
@@ -715,25 +1006,33 @@ public class Facade {
         return consultaServiceInterface.getConsultasByAnimalId(id);
     }
 
-    public void deleteConsulta(Consulta persistentObject) {
-        consultaServiceInterface.deleteConsulta(persistentObject);
-    }
-
+    @Transactional
     public void deleteConsulta(long id) {
         consultaServiceInterface.deleteConsulta(id);
     }
 
 
     // Especialidade--------------------------------------------------------------
-    @Autowired
-    private EspecialidadeServiceInterface especialidadeServiceInterface;
 
+    private final EspecialidadeServiceInterface especialidadeServiceInterface;
+
+    @Transactional
     public Especialidade saveEspecialidade(Especialidade newInstance) {
         return especialidadeServiceInterface.saveEspecialidade(newInstance);
     }
 
-    public Especialidade updateEspecialidade(Especialidade transientObject) {
-        return especialidadeServiceInterface.updateEspecialidade(transientObject);
+    @Transactional
+    public Especialidade updateEspecialidade(EspecialidadeRequest obj, Long id) {
+        //Especialidade o = obj.convertToEntity();
+        Especialidade oldObject = findEspecialidadeById(id);
+
+        TypeMap<EspecialidadeRequest, Especialidade> typeMapper = modelMapper
+                .typeMap(EspecialidadeRequest.class, Especialidade.class)
+                .addMappings(mapper -> mapper.skip(Especialidade::setId));
+
+
+        typeMapper.map(obj, oldObject);
+        return especialidadeServiceInterface.updateEspecialidade(oldObject);
     }
 
     public Especialidade findEspecialidadeById(long id) {
@@ -744,57 +1043,108 @@ public class Facade {
         return especialidadeServiceInterface.getAllEspecialidade();
     }
 
-    public void deleteEspecialidade(Especialidade persistentObject) {
-        especialidadeServiceInterface.deleteEspecialidade(persistentObject);
-    }
-
+    @Transactional
     public void deleteEspecialidade(long id) {
         especialidadeServiceInterface.deleteEspecialidade(id);
     }
 
     // Agendamento--------------------------------------------------------------
-    @Autowired
-    private AgendamentoServiceInterface agendamentoServiceInterface;
+    private final AgendamentoServiceInterface agendamentoServiceInterface;
 
-    public Agendamento saveAgendamento(Agendamento newInstance, Long idVaga) {
-        Vaga vaga = findVagaById(idVaga);
-        if (vaga.getAgendamento() != null ){
-            throw new IllegalStateException("A vaga não está disponível.");
+    @Transactional
+    public Agendamento saveAgendamento(AgendamentoRequest newInstance, Long idVaga, String idSession) {
+        Animal animal = findAnimalById(newInstance.getAnimal().getId(), idSession);
+        Vaga vaga = vagaServiceInterface.findVagaByIdWithLock(idVaga);
+
+        if (animal.getOrigemAnimal() != OrigemAnimal.HVU) {
+            throw new IllegalArgumentException("Só é permitido agendar animais com origem HVU.");
         }
 
-        vaga.setStatus("Agendado");
-        vaga.setAgendamento(newInstance);
-        newInstance.setDataVaga(vaga.getDataHora());
-        newInstance.setStatus(vaga.getStatus());
-        return agendamentoServiceInterface.saveAgendamento(newInstance);
+        if (animal.isObito()) {
+            throw new IllegalArgumentException("Não é permitido agendar animais que tiveram óbito.");
+        }
+
+        if (vaga.getDataHora().isBefore(LocalDateTime.now())) {
+            throw new IllegalArgumentException("A vaga não pode estar no passado.");
+        }
+
+        Agendamento agendamento = newInstance.convertToEntity();
+        agendamento.setAnimal(animal);
+        return confirmarAgendamento(vaga, agendamento);
     }
 
-    public Agendamento createAgendamentoEspecial(AgendamentoEspecialRequest newObject) {
+    @Transactional
+    public Agendamento createAgendamentoEspecial(AgendamentoEspecialRequest newObject, String idSession) {
+        if (newObject.getAnimal().getOrigemAnimal() != OrigemAnimal.HVU) {
+            throw new IllegalArgumentException("Só é permitido agendar animais com origem HVU.");
+        }
+
+        if (newObject.getAnimal().isObito()) {
+            throw new IllegalArgumentException("Não é permitido agendar animais que tiveram óbito.");
+        }
+
         Vaga vaga = new Vaga();
         Agendamento agendamento = new Agendamento();
 
         vaga.setEspecialidade(findEspecialidadeById(newObject.getEspecialidade().getId()));
-        vaga.setMedico(findMedicoById(newObject.getMedico().getId()));
+        vaga.setMedico(findMedicoById(newObject.getMedico().getId(), idSession));
         vaga.setTipoConsulta(findTipoConsultaById(newObject.getTipoConsulta().getId()));
         vaga.setDataHora(newObject.getHorario());
 
         saveVaga(vaga);
 
-        agendamento.setAnimal(animalServiceInterface.findAnimalById(newObject.getAnimal().getId()));
+        agendamento.setAnimal(findAnimalById(newObject.getAnimal().getId(), idSession));
         agendamento.setTipoEspecial(newObject.isTipoEspecial());
 
-        return saveAgendamento(agendamento, vaga.getId());
+        return confirmarAgendamento(vaga, agendamento);
+    }
+
+    private Agendamento confirmarAgendamento(Vaga vaga, Agendamento agendamento) {
+        if (vagaServiceInterface.existsByIdAndAgendamentoIsNotNull(vaga.getId())) {
+            throw new BusinessException("vaga.ocupada", "A vaga já foi ocupada por outro agendamento.");
+        }
+
+        vaga.setStatus("Agendado");
+        vaga.setAgendamento(agendamento);
+        agendamento.setDataVaga(vaga.getDataHora());
+        agendamento.setStatus(vaga.getStatus());
+
+        return agendamentoServiceInterface.saveAgendamento(agendamento);
     }
 
     public Agendamento updateAgendamento(Agendamento transientObject) {
         return agendamentoServiceInterface.updateAgendamento(transientObject);
     }
 
+    @Transactional
+    public Agendamento processUpdateAgendamento(AgendamentoRequest transientObject, Long id, String userId) {
+
+        Agendamento oldObject = findAgendamentoById(id, userId);
+
+        if (transientObject.getAnimal() != null) {
+            oldObject.setAnimal(findAnimalById(transientObject.getAnimal().getId(), userId));
+            transientObject.setAnimal(null);
+        }
+
+        TypeMap<AgendamentoRequest, Agendamento> typeMapper = modelMapper
+                .typeMap(AgendamentoRequest.class, Agendamento.class)
+                .addMappings(mapper -> mapper.skip(Agendamento::setId));
+
+        typeMapper.map(transientObject, oldObject);
+
+        return updateAgendamento(oldObject);
+    }
+
     // Reagenda um agendamento para uma nova vaga
-    public Agendamento reagendarAgendamento(Long idAgendamento, Long idVaga){
-        Agendamento agendamento = findAgendamentoById(idAgendamento);
-        Vaga vagaAntiga = getVagaByAgendamento(agendamento.getId());
-        Vaga novaVaga = findVagaById(idVaga);
+    @Transactional
+    public Agendamento reagendarAgendamento(Long idAgendamento, Long idVaga, String idSession){
+        if (!keycloakService.hasRoleSecretario(idSession) || !keycloakService.hasRoleTutor(idSession)) {
+            throw new ForbiddenOperationException("Você não é responsável por este agendamento.");
+        }
+
+        Agendamento agendamento = findAgendamentoById(idAgendamento, idSession);
+        Vaga vagaAntiga = getVagaByAgendamento(agendamento.getId(), idSession);
+        Vaga novaVaga = findVagaById(idVaga, idSession);
 
         // cancelando vaga anterior, que é a vaga antiga que precisa ser reagendada
         if (vagaAntiga != null){
@@ -825,7 +1175,27 @@ public class Facade {
         return agendamento;
     }
 
-    public Agendamento findAgendamentoById(long id) {
+    public Agendamento findAgendamentoById(long id, String idSession) {
+        if (!keycloakService.hasRoleSecretario(idSession)) {
+            Agendamento agendamento = agendamentoServiceInterface.findAgendamentoById(id);
+            Animal animal = agendamento.getAnimal();
+
+            if (!keycloakService.hasRoleMedico(idSession)) {
+                Tutor tutor = tutorServiceInterface.findTutorByAnimalId(animal.getId());
+
+                if(!tutor.getUserId().equals(idSession)) {
+                    throw new ForbiddenOperationException("Você não é o tutor responsável por este agendamento.");
+                }
+            }
+
+            Vaga vaga = vagaServiceInterface.findVagaByAgendamento(agendamento);
+            Medico medico = vaga.getMedico();
+
+            if(!medico.getUserId().equals(idSession)) {
+                throw new ForbiddenOperationException("Você não é o médico responsável por este agendamento.");
+            }
+        }
+
         return agendamentoServiceInterface.findAgendamentoById(id);
     }
 
@@ -833,18 +1203,31 @@ public class Facade {
         return agendamentoServiceInterface.getAllAgendamento();
     }
 
-    public List<Agendamento> findAgendamentosByMedicoId(Long medicoId, String token){
-        Medico medico = findMedicoById(medicoId);
-        return agendamentoServiceInterface.findAgendamentosByMedicoId(medico, token);
+    public List<Agendamento> findAgendamentosByMedicoId(Long medicoId, String idSession){
+        if (!keycloakService.hasRoleMedico(idSession) && !keycloakService.hasRoleSecretario(idSession)) {
+            throw new AccessDeniedException("Acesso Negado");
+        }
+
+        Medico medico = findMedicoById(medicoId, idSession);
+
+        if (keycloakService.hasRoleMedico(idSession) && !medico.getUserId().equals(idSession)) {
+                throw new ForbiddenOperationException("Você não é o médico responsável por estes agendamentos.");
+            }
+
+        return agendamentoServiceInterface.findAgendamentosByMedicoId(medico);
     }
 
-    public List<Agendamento> findAgendamentosByTutorId(String userId) {
-        Tutor tutor = findTutorByuserId(userId);
+    public List<Agendamento> findAgendamentosByTutorUserId(String idSession) {
+        Tutor tutor = findTutorByUserId(idSession);
 
-        List<Animal> animals = tutor.getAnimal(); // Supondo que você tem um método getAnimais()
+        if(!tutor.getUserId().equals(idSession)) {
+            throw new ForbiddenOperationException("Este não é o responsável por este agendamento");
+        }
+
+        List<Animal> animais = tutor.getAnimais(); // Supondo que você tem um método getAnimais()
 
         List<Agendamento> agendamentos = new ArrayList<>();
-        for (Animal animal : animals) {
+        for (Animal animal : animais) {
             List<Agendamento> agendamentosForAnimal = agendamentoServiceInterface.findAgendamentosByAnimal(animal);
             agendamentos.addAll(agendamentosForAnimal);
         }
@@ -856,7 +1239,7 @@ public class Facade {
         Tutor tutor = tutorServiceInterface.findTutorById(Long.parseLong(id));
 
         List<Agendamento> agendamentosTutor = new ArrayList<>();
-        for (Animal animal : tutor.getAnimal()) {
+        for (Animal animal : tutor.getAnimais()) {
             List<Agendamento> agendamentosForAnimal = agendamentoServiceInterface.findAgendamentosByAnimal(animal);
             agendamentosTutor.addAll(agendamentosForAnimal);
         }
@@ -875,24 +1258,32 @@ public class Facade {
                 .toList();
     }
 
-    public void deleteAgendamento(Agendamento persistentObject) {
-        agendamentoServiceInterface.deleteAgendamento(persistentObject);
-    }
-
+    @Transactional
     public void deleteAgendamento(long id) {
         agendamentoServiceInterface.deleteAgendamento(id);
     }
 
     // Endereco--------------------------------------------------------------
-    @Autowired
-    private EnderecoServiceInterface enderecoServiceInterface;
 
+    private final EnderecoServiceInterface enderecoServiceInterface;
+
+    @Transactional
     public Endereco saveEndereco(Endereco newInstance) {
         return enderecoServiceInterface.saveEndereco(newInstance);
     }
 
-    public Endereco updateEndereco(Endereco transientObject) {
-        return enderecoServiceInterface.updateEndereco(transientObject);
+    @Transactional
+    public Endereco updateEndereco(EnderecoRequest obj, Long id) {
+        //Endereco o = obj.convertToEntity();
+        Endereco oldObject = findEnderecoById(id);
+
+        TypeMap<EnderecoRequest, Endereco> typeMapper = modelMapper
+                .typeMap(EnderecoRequest.class, Endereco.class)
+                .addMappings(mapper -> mapper.skip(Endereco::setId));
+
+
+        typeMapper.map(obj, oldObject);
+        return enderecoServiceInterface.updateEndereco(oldObject);
     }
 
     public Endereco findEnderecoById(long id) {
@@ -903,24 +1294,32 @@ public class Facade {
         return enderecoServiceInterface.getAllEndereco();
     }
 
-    public void deleteEndereco(Endereco persistentObject) {
-        enderecoServiceInterface.deleteEndereco(persistentObject);
-    }
-
+    @Transactional
     public void deleteEndereco(long id) {
         enderecoServiceInterface.deleteEndereco(id);
     }
 
     // Estagiario--------------------------------------------------------------
-    @Autowired
-    private EstagiarioServiceInterface estagiarioServiceInterface;
 
+    private final EstagiarioServiceInterface estagiarioServiceInterface;
+
+    @Transactional
     public Estagiario saveEstagiario(Estagiario newInstance) {
         return estagiarioServiceInterface.saveEstagiario(newInstance);
     }
 
-    public Estagiario updateEstagiario(Estagiario transientObject) {
-        return estagiarioServiceInterface.updateEstagiario(transientObject);
+    @Transactional
+    public Estagiario updateEstagiario(EstagiarioRequest obj, Long id) {
+        //Estagiario o = obj.convertToEntity();
+        Estagiario oldObject = findEstagiarioById(id);
+
+        TypeMap<EstagiarioRequest, Estagiario> typeMapper = modelMapper
+                .typeMap(EstagiarioRequest.class, Estagiario.class)
+                .addMappings(mapper -> mapper.skip(Estagiario::setId));
+
+
+        typeMapper.map(obj, oldObject);
+        return estagiarioServiceInterface.updateEstagiario(oldObject);
     }
 
     public Estagiario findEstagiarioById(long id) {
@@ -931,53 +1330,141 @@ public class Facade {
         return estagiarioServiceInterface.getAllEstagiario();
     }
 
-    public void deleteEstagiario(Estagiario persistentObject) {
-        estagiarioServiceInterface.deleteEstagiario(persistentObject);
-    }
-
+    @Transactional
     public void deleteEstagiario(long id) {
         estagiarioServiceInterface.deleteEstagiario(id);
     }
 
     // Animal--------------------------------------------------------------
-    @Autowired
-    private AnimalServiceInterface animalServiceInterface;
+    private final AnimalServiceInterface animalServiceInterface;
 
-    public Animal saveAnimal(Animal newInstance, String tutor_id) {
-        Tutor tutor = findTutorByuserId(tutor_id);
+    private void validarOrigemAnimal(String role, OrigemAnimal origemAnimal) {
+        if ("TUTOR".equals(role) && origemAnimal != OrigemAnimal.HVU) {
+            throw new OrigemAnimalInvalidaException("Tutores só podem cadastrar animais com origem 'HVU'");
+        }
+        if ("PATOLOGISTA".equals(role) && origemAnimal != OrigemAnimal.LAPA) {
+            throw new OrigemAnimalInvalidaException("Patologistas só podem cadastrar animais com origem 'LAPA'");
+        }
+    }
+
+    @Transactional
+    public Animal saveAnimal(Animal newInstance, String idSession) {
+        Tutor tutor = findTutorByUserId(idSession);
+        if (tutor == null) {
+            throw new ResourceNotFoundException("Tutor", "o idSession ", idSession);
+        }
+
+        if (newInstance.getOrigemAnimal() == null) {
+            newInstance.setOrigemAnimal(OrigemAnimal.HVU);
+        }
+
+        validarOrigemAnimal("TUTOR", newInstance.getOrigemAnimal());
+
+        racaServiceInterface.findRacaById(newInstance.getRaca().getId());
         Animal animal = animalServiceInterface.saveAnimal(newInstance);
-        tutor.getAnimal().add(animal);
-        updateTutor(tutor);
+        tutor.getAnimais().add(animal);
+        tutorServiceInterface.updateTutor(tutor);
         return animal;
     }
 
-    public Animal updateAnimal(Animal transientObject, String idSession) {
-        Tutor tutor = tutorServiceInterface.findTutorByanimalId(transientObject.getId());
+    private Tutor determinarTutor(AnimalByPatologistaRequest request) {
+        int count = 0;
+        if (request.getTutor() != null) count++;
+        if (request.getTutorId() != null) count++;
+        if (request.isAnonimo()) count++;
 
-        if (tutor == null) {
-            throw new ResponseStatusException(HttpStatus.NOT_FOUND, "No tutor found");
+        if (count != 1) {
+            throw new IllegalArgumentException("Você deve enviar uma das opções: tutor, tutorId ou anonimo");
         }
 
-        if(!keycloakService.hasRoleSecretario(idSession) && !keycloakService.hasRoleMedico(idSession) && !tutor.getUserId().equals(idSession)) {
-            throw new AccessDeniedException("This is not your animal");
-        }
+        if (request.isAnonimo()) return tutorServiceInterface.getOrCreateAnonymousTutor();
 
-        return animalServiceInterface.updateAnimal(transientObject);
+        if (request.getTutorId() != null) return tutorServiceInterface.findTutorById(request.getTutorId());
+
+        tutorServiceInterface.verificarDuplicidade(
+                request.getTutor().getCpf(),
+                request.getTutor().getEmail()
+        );
+        return tutorServiceInterface.saveTutor(request.getTutor().convertToEntity());
     }
 
-    public Animal findAnimalById(long id, String idSession) {
+    @Transactional
+    public Animal saveAnimalByPatologista(AnimalByPatologistaRequest request) {
+        Animal animal = request.getAnimal().convertToEntity();
+
+        if (animal.getOrigemAnimal() == null) {
+            animal.setOrigemAnimal(OrigemAnimal.LAPA);
+        }
+        validarOrigemAnimal("PATOLOGISTA", animal.getOrigemAnimal());
+
+        Tutor tutor = determinarTutor(request);
+
+        if (tutor.getAnimais() == null) {
+            tutor.setAnimais(new ArrayList<>());
+        }
+        tutor.getAnimais().add(animal);
+        Animal savedAnimal = animalServiceInterface.saveAnimal(animal);
+
+        tutorServiceInterface.updateTutor(tutor);
+
+        return savedAnimal;
+    }
+
+    @Transactional
+    public Animal updateAnimal(Long id, AnimalRequest request, String idSession) {
         Animal animal = animalServiceInterface.findAnimalById(id);
-        Tutor tutor = tutorServiceInterface.findTutorByanimalId(animal.getId());
+        Tutor tutor = tutorServiceInterface.findTutorByAnimalId(animal.getId());
+        Medico medico = findMedicoByUserId(idSession);
 
-        if (tutor == null) {
-            throw new ResponseStatusException(HttpStatus.NOT_FOUND, "No tutor found for the animal with ID: " + animal.getId());
+        boolean isPatologista = keycloakService.hasRolePatologista(idSession);
+        boolean isMedico = keycloakService.hasRoleMedico(idSession);
+        boolean isTutor = keycloakService.hasRoleTutor(idSession);
+
+        if (isTutor && !tutor.getUserId().equals(idSession)) {
+            throw new ForbiddenOperationException("Você não é responsável por este animal");
         }
 
-        if(!keycloakService.hasRoleSecretario(idSession) && !keycloakService.hasRoleMedico(idSession) && !tutor.getUserId().equals(idSession)){
-            throw new AccessDeniedException("This is not your animal");
+        if (isMedico && !existsVagaByMedicoIdAndAnimalId(medico.getId(), animal.getId())) {
+            throw new ForbiddenOperationException("Você não é o médico responsável por este animal");
         }
 
-        return animal;
+        if (!isPatologista && !animal.getOrigemAnimal().equals(OrigemAnimal.HVU)) {
+            throw new ForbiddenOperationException("Você só pode editar animais de origem HVU");
+        }
+
+        // Atualiza raça, se fornecida
+        if (request.getRaca() != null) {
+            animal.setRaca(racaServiceInterface.findRacaById(request.getRaca().getId()));
+            request.setRaca(null);
+        }
+
+        // Mapeia os campos restantes
+        modelMapper.typeMap(AnimalRequest.class, Animal.class)
+                .addMappings(mapper -> mapper.skip(Animal::setId))
+                .map(request, animal);
+
+        return animalServiceInterface.updateAnimal(animal);
+    }
+
+    public Animal findAnimalById(long animalId, String idSession) {
+        // caso não seja um secretario ou medico, verifica se o animal pertece ao tutor de fato
+        if (!keycloakService.hasRoleSecretario(idSession) && !keycloakService.hasRoleMedico(idSession) && !keycloakService.hasRolePatologista(idSession)) {
+            Tutor tutor = tutorServiceInterface.findTutorByAnimalId(animalId);
+
+            if (!tutor.getUserId().equals(idSession)) {
+                throw new ForbiddenOperationException("Este não é o seu animal");
+            }
+        }
+
+        if (keycloakService.hasRoleMedico(idSession)) {
+            Medico medico = findMedicoByUserId(idSession);
+
+            if (!existsVagaByMedicoIdAndAnimalId(medico.getId(), animalId)) {
+                throw new ForbiddenOperationException("Você não é o médico responsável por este animal");
+            }
+        }
+
+        return animalServiceInterface.findAnimalById(animalId);
     }
 
     public List<Animal> getAllAnimal() {
@@ -985,35 +1472,71 @@ public class Facade {
     }
 
     public List<Animal> getAllAnimalTutor(String userId) {
-        Tutor tutor = findTutorByuserId(userId);
-        if(tutor.equals(null) ) {
-            throw new ServiceException("Erro ao buscar os Agendamentos");
+        Tutor tutor = findTutorByUserId(userId);
+        return tutor.getAnimais();
+    }
+
+    public Animal getAnimalByFichaNumber(String fichaNumero) {
+        Animal animal = animalServiceInterface.findAnimalByFichaNumber(fichaNumero);
+
+        if (!animal.getOrigemAnimal().equals(OrigemAnimal.HVU)) {
+            throw new ForbiddenOperationException("Você não tem acesso a animais dessa origem");
         }
-        return tutor.getAnimal();
+
+        return animal;
     }
 
-    public Animal getAnimalByFichaNumber(String fichaNumero){
-        return animalServiceInterface.findAnimalByFichaNumber(fichaNumero);
-    }
+    @Transactional
+    public void deleteAnimal(long id, String userId) {
+        Tutor tutor = tutorServiceInterface.findTutorByAnimalId(id);
+        Animal animal = animalServiceInterface.findAnimalById(id);
 
-    public void deleteAnimal(Animal persistentObject) {
-        animalServiceInterface.deleteAnimal(persistentObject);
-    }
+        boolean isPatologista = keycloakService.hasRolePatologista(userId);
+        if (isPatologista && !animal.getOrigemAnimal().equals(OrigemAnimal.LAPA)) {
+            throw new ForbiddenOperationException("Você não tem permissão para deletar este animal");
+        }
 
-    public void deleteAnimal(long id) {
+        boolean isTutor = keycloakService.hasRoleTutor(userId);
+        if(isTutor && !tutor.getUserId().equals(userId)) {
+            throw new ForbiddenOperationException("Você não tem permissão para deletar este animal");
+        }
+
         animalServiceInterface.deleteAnimal(id);
     }
 
-    // Especie--------------------------------------------------------------
-    @Autowired
-    private EspecieServiceInterface especieServiceInterface;
+    public List<Animal> findAnimalsByOrigemAnimal(OrigemAnimal origem, String userId) {
+        if (keycloakService.hasRolePatologista(userId)) {
+            return animalServiceInterface.findAnimalsByOrigemAnimal(origem);
+        }
 
+        if ((keycloakService.hasRoleSecretario(userId) && origem == OrigemAnimal.HVU)) {
+            return animalServiceInterface.findAnimalsByOrigemAnimal(origem);
+        }
+
+        throw new ForbiddenOperationException("Você não tem acesso a animais dessa origem");
+    }
+
+    // Especie--------------------------------------------------------------
+
+    private final EspecieServiceInterface especieServiceInterface;
+
+    @Transactional
     public Especie saveEspecie(Especie newInstance) {
         return especieServiceInterface.saveEspecie(newInstance);
     }
 
-    public Especie updateEspecie(Especie transientObject) {
-        return especieServiceInterface.updateEspecie(transientObject);
+    @Transactional
+    public Especie updateEspecie(EspecieRequest obj, Long id) {
+        //Especie o = obj.convertToEntity();
+        Especie oldObject = findEspecieById(id);
+
+        TypeMap<EspecieRequest, Especie> typeMapper = modelMapper
+                .typeMap(EspecieRequest.class, Especie.class)
+                .addMappings(mapper -> mapper.skip(Especie::setId));
+
+
+        typeMapper.map(obj, oldObject);
+        return especieServiceInterface.updateEspecie(oldObject);
     }
 
     public Especie findEspecieById(long id) {
@@ -1024,25 +1547,49 @@ public class Facade {
         return especieServiceInterface.getAllEspecie();
     }
 
-    public void deleteEspecie(Especie persistentObject) {
-        especieServiceInterface.deleteEspecie(persistentObject);
-    }
-
+    @Transactional
     public void deleteEspecie(long id) {
         especieServiceInterface.deleteEspecie(id);
     }
 
     // Area--------------------------------------------------------------
-    @Autowired
-    private AreaServiceInterface areaServiceInterface;
+    private final AreaServiceInterface areaServiceInterface;
 
+    @Transactional
     public Area saveArea(Area newInstance) {
+        List<Especie> especies = newInstance.getEspecie()
+                .stream()
+                .map(e -> {
+                    Especie especie = especieServiceInterface.findEspecieById(e.getId());
+                    if (especie == null) {
+                        throw new IdNotFoundException(e.getId(), "Especie");
+                    }
+                    return especie;
+                })
+                .toList();
+
+        newInstance.setEspecie(especies);
+
         return areaServiceInterface.saveArea(newInstance);
     }
 
-    public Area updateArea(Area transientObject) {
-        return areaServiceInterface.updateArea(transientObject);
+    @Transactional
+    public Area updateArea(AreaRequest transientObject, Long id) {
+        Area oldObject = findAreaById(id);
+
+        oldObject.setTituloArea(transientObject.getTituloArea());
+
+        if (transientObject.getEspecie() != null) {
+            List<Especie> especies = transientObject.getEspecie().stream()
+                    .map(e -> especieServiceInterface.findEspecieById(e.getId())) // buscar cada espécie do DB
+                    .collect(Collectors.toList());
+
+            oldObject.setEspecie(especies);
+        }
+
+        return areaServiceInterface.updateArea(oldObject);
     }
+
 
     public Area findAreaById(Long id) {
         return areaServiceInterface.findAreaById(id);
@@ -1052,24 +1599,37 @@ public class Facade {
         return areaServiceInterface.getAllArea();
     }
 
-    public void deleteArea(Area persistentObject) {
-        areaServiceInterface.deleteArea(persistentObject);
-    }
-
+    @Transactional
     public void deleteArea(long id) {
         areaServiceInterface.deleteArea(id);
     }
 
     // CampoLaudo--------------------------------------------------------------
-    @Autowired
-    private CampoLaudoServiceInterface campoLaudoServiceInterface;
+    private final CampoLaudoServiceInterface campoLaudoServiceInterface;
+    private final OrgaoServiceInterface orgaoServiceInterface;
 
+    @Transactional
     public CampoLaudo saveCampoLaudo(CampoLaudo newInstance) {
+        Orgao orgao = orgaoServiceInterface.findOrgaoById(newInstance.getOrgao().getId());
+        newInstance.setOrgao(orgao);
+
         return campoLaudoServiceInterface.saveCampoLaudo(newInstance);
     }
 
-    public CampoLaudo updateCampoLaudo(CampoLaudo transientObject) {
-        return campoLaudoServiceInterface.updateCampoLaudo(transientObject);
+    @Transactional
+    public CampoLaudo updateCampoLaudo(CampoLaudoRequest transientObject, Long id) {
+
+        //CampoLaudo o = obj.convertToEntity();
+        CampoLaudo oldObject = campoLaudoServiceInterface.findCampoLaudoById(id);
+
+        TypeMap<CampoLaudoRequest, CampoLaudo> typeMapper = modelMapper
+                .typeMap(CampoLaudoRequest.class, CampoLaudo.class)
+                .addMappings(mapper -> mapper.skip(CampoLaudo::setId));
+
+
+        typeMapper.map(transientObject, oldObject);
+
+        return campoLaudoServiceInterface.updateCampoLaudo(oldObject);
     }
 
     public CampoLaudo findCampoLaudoById(Long id) {
@@ -1080,24 +1640,32 @@ public class Facade {
         return campoLaudoServiceInterface.getAllCampoLaudo();
     }
 
-    public void deleteCampoLaudo(CampoLaudo persistentObject) {
-        campoLaudoServiceInterface.deleteCampoLaudo(persistentObject);
-    }
-
+    @Transactional
     public void deleteCampoLaudo(long id) {
         campoLaudoServiceInterface.deleteCampoLaudo(id);
     }
 
     // Etapa--------------------------------------------------------------
-    @Autowired
-    private EtapaServiceInterface etapaServiceInterface;
 
+    private final EtapaServiceInterface etapaServiceInterface;
+
+    @Transactional
     public Etapa saveEtapa(Etapa newInstance) {
         return etapaServiceInterface.saveEtapa(newInstance);
     }
 
-    public Etapa updateEtapa(Etapa transientObject) {
-        return etapaServiceInterface.updateEtapa(transientObject);
+    @Transactional
+    public Etapa updateEtapa(EtapaRequest obj, Long id) {
+        //Etapa o = obj.convertToEntity();
+        Etapa oldObject = findEtapaById(id);
+
+        TypeMap<EtapaRequest, Etapa> typeMapper = modelMapper
+                .typeMap(EtapaRequest.class, Etapa.class)
+                .addMappings(mapper -> mapper.skip(Etapa::setId));
+
+
+        typeMapper.map(obj, oldObject);
+        return etapaServiceInterface.updateEtapa(oldObject);
     }
 
     public Etapa findEtapaById(Long id) {
@@ -1108,54 +1676,117 @@ public class Facade {
         return etapaServiceInterface.getAllEtapa();
     }
 
-    public void deleteEtapa(Etapa persistentObject) {
-        etapaServiceInterface.deleteEtapa(persistentObject);
-    }
-
+    @Transactional
     public void deleteEtapa(long id) {
         etapaServiceInterface.deleteEtapa(id);
     }
 
     // Ficha--------------------------------------------------------------
 
-    @Autowired
-    private FichaServiceInterface fichaServiceInterface;
 
+    private final FichaServiceInterface fichaServiceInterface;
+
+    @Transactional
     public Ficha saveFicha(Ficha newInstance) {
+        Long agendamentoId = (newInstance.getAgendamento() != null)
+                ? newInstance.getAgendamento().getId()
+                : null;
+
+        if (agendamentoId == null || agendamentoId <= 0) {
+            throw new IllegalArgumentException("Ficha deve estar vinculada a um agendamento válido.");
+        }
+
+        if (!agendamentoRepository.existsById(agendamentoId)) {
+            throw new ResourceNotFoundException("Agendamento", "id", agendamentoId);
+        }
+
         return fichaServiceInterface.saveFicha(newInstance);
     }
 
-    public Ficha updateFicha(Ficha transientObject) {
-        return fichaServiceInterface.updateFicha(transientObject);
+    @Transactional
+    public Ficha updateFicha(FichaRequest obj, Long id) {
+        if (obj == null) {
+            throw new IllegalArgumentException("FichaRequest não pode ser nulo.");
+        }
+
+        if (obj.getAgendamento() == null) {
+            throw new IllegalArgumentException("Ficha deve estar vinculada a um agendamento.");
+        }
+
+        Long agendamentoId = obj.getAgendamento().getId();
+        if (!agendamentoRepository.existsById(agendamentoId)) {
+            throw new ResourceNotFoundException("Agendamento", "id", agendamentoId);
+        }
+
+        Ficha existingFicha = findFichaById(id);
+        obj.applyToEntity(existingFicha);
+        return fichaServiceInterface.updateFicha(existingFicha);
     }
 
     public Ficha findFichaById(long id) {
         return fichaServiceInterface.findFichaById(id);
     }
 
+    public List<Ficha> findFichasByAgendamentoId(Long agendamentoId) {
+        if (agendamentoId == null || agendamentoId <= 0) {
+            throw new IllegalArgumentException("O id do agendamento é inválido.");
+        }
+        if (!agendamentoRepository.existsById(agendamentoId)) {
+            throw new ResourceNotFoundException("Agendamento", "id", agendamentoId);
+        }
+
+        return fichaServiceInterface.findFichasByAgendamentoId(agendamentoId);
+    }
+
+    public List<Ficha> findFichasByAnimalId(Long animalId) {
+        if (animalId == null || animalId <= 0) {
+            throw new IllegalArgumentException("O id do animal é inválido.");
+        }
+        if (!animalRepository.existsById(animalId)) {
+            throw new ResourceNotFoundException("Animal", "id", animalId);
+        }
+
+        return fichaServiceInterface.findFichasByAnimalId(animalId);
+    }
+
     public List<Ficha> getAllFicha() {
         return fichaServiceInterface.getAllFicha();
     }
 
-    public void deleteFicha(Ficha persistentObject) {
-        fichaServiceInterface.deleteFicha(persistentObject);
-    }
-
+    @Transactional
     public void deleteFicha(long id) {
         fichaServiceInterface.deleteFicha(id);
     }
 
     // FichaSolicitacaoServico--------------------------------------------------------------
 
-    @Autowired
-    private FichaSolicitacaoServicoServiceInterface fichaSolicitacaoServicoServiceInterface;
 
+    private final FichaSolicitacaoServicoServiceInterface fichaSolicitacaoServicoServiceInterface;
+
+    @Transactional
     public FichaSolicitacaoServico saveFichaSolicitacaoServico(FichaSolicitacaoServico newInstance) {
         return fichaSolicitacaoServicoServiceInterface.saveFichaSolicitacaoServico(newInstance);
     }
 
-    public FichaSolicitacaoServico updateFichaSolicitacaoServico(FichaSolicitacaoServico transientObject) {
-        return fichaSolicitacaoServicoServiceInterface.updateFichaSolicitacaoServico(transientObject);
+    @Transactional
+    public FichaSolicitacaoServico updateFichaSolicitacaoServico(FichaSolicitacaoServicoRequest obj, Long id, String idSession) {
+        //FichaSolicitacaoServico o = obj.convertToEntity();
+        FichaSolicitacaoServico oldObject = findFichaSolicitacaoServicoById(id);
+
+        if(obj.getMedico() != null){
+            oldObject.setMedico(findMedicoById(obj.getMedico().getId(), idSession));
+            obj.setMedico(null);
+        }
+
+
+        TypeMap<FichaSolicitacaoServicoRequest, FichaSolicitacaoServico> typeMapper = modelMapper
+                .typeMap(FichaSolicitacaoServicoRequest.class, FichaSolicitacaoServico.class)
+                .addMappings(mapper -> mapper.skip(FichaSolicitacaoServico::setId));
+
+
+        typeMapper.map(obj, oldObject);
+
+        return fichaSolicitacaoServicoServiceInterface.updateFichaSolicitacaoServico(oldObject);
     }
 
     public FichaSolicitacaoServico findFichaSolicitacaoServicoById(Long id) {
@@ -1166,55 +1797,63 @@ public class Facade {
         return fichaSolicitacaoServicoServiceInterface.getAllFichaSolicitacaoServico();
     }
 
-    public void deleteFichaSolicitacaoServico(FichaSolicitacaoServico persistentObject) {
-        fichaSolicitacaoServicoServiceInterface.deleteFichaSolicitacaoServico(persistentObject);
-    }
-
+    @Transactional
     public void deleteFichaSolicitacaoServico(long id) {
         fichaSolicitacaoServicoServiceInterface.deleteFichaSolicitacaoServico(id);
     }
 
     // Foto--------------------------------------------------------------
 
-    @Autowired
+    private final FotoServiceInterface fotoServiceInterface;
 
-    private FotoServiceInterface fotoServiceInterface;
-
-    public Foto saveFoto(Foto newInstance) {
-        return fotoServiceInterface.saveFoto(newInstance);
+    public Foto saveFoto(MultipartFile file, String title) {
+        return fotoServiceInterface.save(file, title);
     }
 
-    public Foto updateFoto(Foto transientObject) {
-        return fotoServiceInterface.updateFoto(transientObject);
+    public Foto replaceFoto(long id, MultipartFile newFile, String newTitle) {
+        return fotoServiceInterface.replaceFile(id, newFile, newTitle);
     }
 
-    public Foto findFotoById(Long id) {
-        return fotoServiceInterface.findFotoById(id);
+    public Foto findFotoById(long id) {
+        return fotoServiceInterface.findById(id);
     }
 
-    public List<Foto> getAllFoto() {
-        return fotoServiceInterface.getAllFoto();
+    public byte[] loadFotoFile(long id) {
+        return fotoServiceInterface.loadFile(id);
     }
 
-    public void deleteFoto(Foto persistentObject) {
-        fotoServiceInterface.deleteFoto(persistentObject);
+    public List<Foto> findllFotos() {
+        return fotoServiceInterface.findAll();
     }
 
     public void deleteFoto(long id) {
-        fotoServiceInterface.deleteFoto(id);
+        fotoServiceInterface.delete(id);
     }
 
     // Instituicao--------------------------------------------------------------
 
-    @Autowired
-    private InstituicaoServiceInterface instituicaoServiceInterface;
+    private final InstituicaoServiceInterface instituicaoServiceInterface;
 
+    @Transactional
     public Instituicao saveInstituicao(Instituicao newInstance) {
         return instituicaoServiceInterface.saveInstituicao(newInstance);
     }
 
-    public Instituicao updateInstituicao(Instituicao transientObject) {
-        return instituicaoServiceInterface.updateInstituicao(transientObject);
+    @Transactional
+    public Instituicao updateInstituicao(InstituicaoRequest obj, Long id) {
+
+        //Instituicao o = obj.convertToEntity();
+        Instituicao oldObject = findInstituicaoById(id);
+
+        TypeMap<InstituicaoRequest, Instituicao> typeMapper = modelMapper
+                .typeMap(InstituicaoRequest.class, Instituicao.class)
+                .addMappings(mapper -> mapper.skip(Instituicao::setId));
+
+
+        typeMapper.map(obj, oldObject);
+
+
+        return instituicaoServiceInterface.updateInstituicao(oldObject);
     }
 
     public Instituicao findInstituicaoById(long id) {
@@ -1225,25 +1864,41 @@ public class Facade {
         return instituicaoServiceInterface.getAllInstituicao();
     }
 
-    public void deleteInstituicao(Instituicao persistentObject) {
-        instituicaoServiceInterface.deleteInstituicao(persistentObject);
-    }
-
+    @Transactional
     public void deleteInstituicao(long id) {
         instituicaoServiceInterface.deleteInstituicao(id);
     }
 
 
     // LaudoNecropsia--------------------------------------------------------------
-    @Autowired
-    private LaudoNecropsiaServiceInterface laudoNecropsiaServiceInterfcae;
 
+    private final LaudoNecropsiaServiceInterface laudoNecropsiaServiceInterfcae;
+
+    @Transactional
     public LaudoNecropsia saveLaudoNecropsia(LaudoNecropsia newInstance) {
         return laudoNecropsiaServiceInterfcae.saveLaudoNecropsia(newInstance);
     }
 
-    public LaudoNecropsia updateLaudoNecropsia(LaudoNecropsia transientObject) {
-        return laudoNecropsiaServiceInterfcae.updateLaudoNecropsia(transientObject);
+    @Transactional
+    public LaudoNecropsia updateLaudoNecropsia(LaudoNecropsiaRequest obj, Long id) {
+        LaudoNecropsia oldObject = laudoNecropsiaServiceInterfcae.findLaudoNecropsiaById(id);
+
+        // campoLaudo
+        if(obj.getCampoLaudo() != null && !obj.getCampoLaudo().isEmpty()){
+            List<CampoLaudo> updatedCampoLaudos = obj.getCampoLaudo().stream()
+                    .map(campo -> findCampoLaudoById(campo.getId()))
+                    .collect(Collectors.toList());
+            oldObject.setCampoLaudo(updatedCampoLaudos);
+            obj.setCampoLaudo(null); // Limpar para evitar mapeamento duplo
+        }
+
+        TypeMap<LaudoNecropsiaRequest, LaudoNecropsia> typeMapper = modelMapper
+                .typeMap(LaudoNecropsiaRequest.class, LaudoNecropsia.class)
+                .addMappings(mapper -> mapper.skip(LaudoNecropsia::setId));
+
+        typeMapper.map(obj, oldObject);
+
+        return laudoNecropsiaServiceInterfcae.updateLaudoNecropsia(oldObject);
     }
 
     public LaudoNecropsia findLaudoNecropsiaById(long id) {
@@ -1254,25 +1909,33 @@ public class Facade {
         return laudoNecropsiaServiceInterfcae.getAllLaudoNecropsia();
     }
 
-    public void deleteLaudoNecropsia(LaudoNecropsia persistentObject) {
-        laudoNecropsiaServiceInterfcae.deleteLaudoNecropsia(persistentObject);
-    }
-
+    @Transactional
     public void deleteLaudoNecropsia(long id) {
         laudoNecropsiaServiceInterfcae.deleteLaudoNecropsia(id);
     }
 
     // MaterialColetado--------------------------------------------------------------
-    @Autowired
 
-    private MaterialColetadoServiceInterface materialColetadoServiceInterface;
+    private final MaterialColetadoServiceInterface materialColetadoServiceInterface;
 
+    @Transactional
     public MaterialColetado saveMaterialColetado(MaterialColetado newInstance) {
         return materialColetadoServiceInterface.saveMaterialColetado(newInstance);
     }
 
-    public MaterialColetado updateMaterialColetado(MaterialColetado transientObject) {
-        return materialColetadoServiceInterface.updateMaterialColetado(transientObject);
+    @Transactional
+    public MaterialColetado updateMaterialColetado(MaterialColetadoRequest obj, Long id) {
+        //MaterialColetado o = obj.convertToEntity();
+        MaterialColetado oldObject = materialColetadoServiceInterface.findMaterialColetadoById(id);
+
+        TypeMap<MaterialColetadoRequest, MaterialColetado> typeMapper = modelMapper
+                .typeMap(MaterialColetadoRequest.class, MaterialColetado.class)
+                .addMappings(mapper -> mapper.skip(MaterialColetado::setId));
+
+
+        typeMapper.map(obj, oldObject);
+
+        return materialColetadoServiceInterface.updateMaterialColetado(oldObject);
     }
 
     public MaterialColetado findMaterialColetadoById(long id) {
@@ -1283,25 +1946,41 @@ public class Facade {
         return materialColetadoServiceInterface.getAllMaterialColetado();
     }
 
-    public void deleteMaterialColetado(MaterialColetado persistentObject) {
-        materialColetadoServiceInterface.deleteMaterialColetado(persistentObject);
-    }
-
+    @Transactional
     public void deleteMaterialColetado(long id) {
         materialColetadoServiceInterface.deleteMaterialColetado(id);
     }
 
     // Orgao--------------------------------------------------------------
-    @Autowired
 
-    private OrgaoServiceInterface OrgaoServiceInterface;
+    private final OrgaoServiceInterface OrgaoServiceInterface;
 
+    @Transactional
     public Orgao saveOrgao(Orgao newInstance) {
+        if (newInstance.getFoto() != null) {
+            newInstance.setFoto(null);
+        }
+
         return OrgaoServiceInterface.saveOrgao(newInstance);
     }
 
-    public Orgao updateOrgao(Orgao transientObject) {
-        return OrgaoServiceInterface.updateOrgao(transientObject);
+    @Transactional
+    public Orgao updateOrgao(OrgaoRequest transientObject, Long id) {
+        Orgao oldObject = OrgaoServiceInterface.findOrgaoById(id);
+
+        TypeMap<OrgaoRequest, Orgao> typeMapper = modelMapper
+                .typeMap(OrgaoRequest.class, Orgao.class)
+                .addMappings(mapper -> mapper.skip(Orgao::setId));
+
+        typeMapper.map(transientObject, oldObject);
+
+        if (transientObject.getFoto() == null) {
+            oldObject.setFoto(null);
+        } else if (oldObject.getFoto() != null && oldObject.getFoto().getId() == 0) {
+            oldObject.setFoto(null);
+        }
+
+        return OrgaoServiceInterface.updateOrgao(oldObject);
     }
 
     public Orgao findOrgaoById(long id) {
@@ -1312,10 +1991,7 @@ public class Facade {
         return OrgaoServiceInterface.getAllOrgao();
     }
 
-    public void deleteOrgao(Orgao persistentObject) {
-        OrgaoServiceInterface.deleteOrgao(persistentObject);
-    }
-
+    @Transactional
     public void deleteOrgao(long id) {
         OrgaoServiceInterface.deleteOrgao(id);
     }
@@ -1323,34 +1999,60 @@ public class Facade {
 
     // Arquivo --------------------------------------------------------------
 
-    @Autowired
-    private FileServiceInterface fileService;
+
+    private final FileServiceInterface fileService;
 
     public File findFile(String fileName) {
         return fileService.findFile(fileName);
     }
 
+    @Transactional
     public String storeFile(InputStream file, String fileName) {
         String fn = System.currentTimeMillis() + "-" + fileName;
         return fileService.storeFile(file, fn.replace(" ", ""));
     }
 
+    @Transactional
     public void deleteFile(String fileName) {
         fileService.deleteFile(fileName);
     }
 
     // CampoLaudoMicroscopia --------------------------------------------------------------
 
-    @Autowired
-    private CampoLaudoMicroscopiaServiceInterface campoLaudoMicroscopiaServiceInterface;
+    private final CampoLaudoMicroscopiaServiceInterface campoLaudoMicroscopiaServiceInterface;
+    private final AnimalRepository animalRepository;
+    private final AgendamentoRepository agendamentoRepository;
+    private final OrgaoRepository orgaoRepository;
 
+    @Transactional
     public CampoLaudoMicroscopia saveCampoLaudoMicroscopia(CampoLaudoMicroscopia newInstance) {
+        if (newInstance.getOrgao() != null && newInstance.getOrgao().getId() > 0) {
+            Orgao orgao = orgaoServiceInterface.findOrgaoById(newInstance.getOrgao().getId());
+            newInstance.setOrgao(orgao);
+        } else {
+            newInstance.setOrgao(null);
+        }
+
         return campoLaudoMicroscopiaServiceInterface.saveCampoLaudoMicroscopia(newInstance);
     }
 
-    public CampoLaudoMicroscopia updateCampoLaudoMicroscopia(CampoLaudoMicroscopia transientObject) {
-        return campoLaudoMicroscopiaServiceInterface.updateCampoLaudoMicroscopia(transientObject);
+    @Transactional
+    public CampoLaudoMicroscopia updateCampoLaudoMicroscopia(CampoLaudoMicroscopiaRequest obj, Long id) {
+        CampoLaudoMicroscopia oldObject = findCampoLaudoMicroscopiaById(id);
+
+        if (obj.getOrgao() != null && obj.getOrgao().getId() > 0) {
+            Orgao orgaoReal = orgaoServiceInterface.findOrgaoById(obj.getOrgao().getId());
+            oldObject.setOrgao(orgaoReal);
+        } else {
+            oldObject.setOrgao(null);
+        }
+
+        oldObject.setDescricao(obj.getDescricao());
+        oldObject.setProcessamento(obj.getProcessamento());
+
+        return campoLaudoMicroscopiaServiceInterface.updateCampoLaudoMicroscopia(oldObject);
     }
+
 
     public CampoLaudoMicroscopia findCampoLaudoMicroscopiaById(Long id) {
         return campoLaudoMicroscopiaServiceInterface.findCampoLaudoMicroscopiaById(id);
@@ -1360,10 +2062,7 @@ public class Facade {
         return campoLaudoMicroscopiaServiceInterface.getAllCampoLaudoMicroscopia();
     }
 
-    public void deleteCampoLaudoMicroscopia(CampoLaudoMicroscopia persistentObject) {
-        campoLaudoMicroscopiaServiceInterface.deleteCampoLaudoMicroscopia(persistentObject.getId());
-    }
-
+    @Transactional
     public void deleteCampoLaudoMicroscopia(long id) {
         campoLaudoMicroscopiaServiceInterface.deleteCampoLaudoMicroscopia(id);
     }
